logs estructurados/codigos error/correlation id